--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
     "express-rate-limit": "^6.7.0",
     "express-validator": "^6.15.0",
     "helmet": "^6.0.1",
+    "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "markdown-it": "^13.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.1",
-    "redis": "^4.6.5",
     "sequelize": "^6.29.3",
     "winston": "^3.8.2"
   },
