--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "build": "echo 'Backend build process' && npm run build:frontend-admin",
     "build:frontend-admin": "cd frontend-admin && npm run build",
     "migrate": "node ./backend/src/utils/db-migrate.js",
-    "seed": "node ./backend/src/utils/db-seed.js"
+    "seed": "node ./backend/src/utils/db-seed.js",
+    "deploy": "pm2 deploy ecosystem.config.js production",
+    "deploy:setup": "pm2 deploy ecosystem.config.js production setup",
+    "tasks": "node ./backend/src/services/taskRunner.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yourname/smart-community.git"
+    "url": "git+https://github.com/luqianlin/love-home.git"
   },
   "keywords": [
     "社区管理",
@@ -34,6 +37,7 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -46,7 +50,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
+    "pm2": "^5.3.0",
     "sequelize": "^6.29.3",
     "winston": "^3.8.2"
   },
