修复: 添加直接健康检查端点解决ERR_CONNECTION_CLOSED问题

--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -14,7 +14,10 @@
     "core-js": "^3.29.0",
     "dayjs": "^1.11.7",
     "echarts": "^5.4.1",
+    "element-plus": "^2.3.0",
     "js-cookie": "^3.0.1",
+    "leaflet": "^1.9.3",
+    "leaflet-draw": "^1.0.4",
     "marked": "^4.3.0",
     "pinia": "^2.0.33",
     "tailwindcss": "^3.2.7",
