--- a/frontend-mp/project.config.json
+++ b/frontend-mp/project.config.json
@@ -5,7 +5,7 @@
     "include": []
   },
   "setting": {
-    "urlCheck": true,
+    "urlCheck": false,
     "es6": true,
     "enhance": true,
     "postcss": true,
@@ -56,7 +56,7 @@
     "disableSWC": true
   },
   "compileType": "miniprogram",
-  "libVersion": "2.24.3",
+  "libVersion": "3.8.8",
   "appid": "wxc03742921d43f153",
   "projectname": "智慧社区",
   "isGameTourist": false,
