--- a/nginx-config.conf
+++ b/nginx-config.conf
@@ -6,6 +6,16 @@ server {
     location / {
         return 301 https://$host$request_uri;
     }
+    
+    # 为HTTP提供健康检查端点
+    location /api/health {
+        proxy_pass http://localhost:8080/api/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
 
 server {
@@ -13,13 +23,42 @@ server {
     server_name lovehome.xin;
 
     # SSL配置 - 使用自签名证书，后续可以替换为正式证书
-    ssl_certificate /var/www/love-home/18979882_lovehome.xin_nginx/server.crt;
-    ssl_certificate_key /var/www/love-home/18979882_lovehome.xin_nginx/server.key;
+    ssl_certificate /var/www/love-home/18979882_lovehome.xin_nginx/lovehome.xin.pem;
+    ssl_certificate_key /var/www/love-home/18979882_lovehome.xin_nginx/lovehome.xin.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 1d;
+
+    # 专门的健康检查端点配置
+    location = /api/health {
+        proxy_pass http://localhost:8080/api/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_next_upstream off;
+        proxy_read_timeout 5s;
+        proxy_connect_timeout 5s;
+        
+        # 允许跨域请求（对于健康检查很重要）
+        add_header 'Access-Control-Allow-Origin' '*';
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+        
+        # 处理OPTIONS请求
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+    }
 
     # API代理 - 注意端口是8080
     location /api {
