修复: 微信小程序CONNECTION_CLOSED错误，优化连接处理

--- a/frontend-mp/project.config.json
+++ b/frontend-mp/project.config.json
@@ -81,5 +81,14 @@
     }
   },
   "simulatorPluginLibVersion": {},
-  "editorSetting": {}
+  "editorSetting": {},
+  "requestDomains": [
+    "lovehome.xin"
+  ],
+  "uploadDomains": [
+    "lovehome.xin"
+  ],
+  "downloadDomains": [
+    "lovehome.xin"
+  ]
 }
