--- a/nginx-config.conf
+++ b/nginx-config.conf
@@ -2,36 +2,7 @@ server {
     listen 80;
     server_name lovehome.xin;
 
-    # 重定向HTTP到HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-    
-    # 为HTTP提供健康检查端点
-    location /api/health {
-        proxy_pass http://localhost:8080/api/health;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name lovehome.xin;
-
-    # SSL配置 - 使用自签名证书，后续可以替换为正式证书
-    ssl_certificate /var/www/love-home/18979882_lovehome.xin_nginx/lovehome.xin.pem;
-    ssl_certificate_key /var/www/love-home/18979882_lovehome.xin_nginx/lovehome.xin.key;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1d;
-
-    # 专门的健康检查端点配置
+    # 对健康检查请求不进行重定向，直接代理到后端
     location = /api/health {
         proxy_pass http://localhost:8080/api/health;
         proxy_http_version 1.1;
@@ -40,19 +11,152 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_next_upstream off;
-        proxy_read_timeout 5s;
-        proxy_connect_timeout 5s;
+        proxy_read_timeout 10s;
+        proxy_connect_timeout 10s;
         
-        # 允许跨域请求（对于健康检查很重要）
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+        # 允许跨域请求
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         
         # 处理OPTIONS请求
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+    }
+    
+    # 另一个健康检查路径，不带/api前缀
+    location = /health {
+        proxy_pass http://localhost:8080/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_next_upstream off;
+        proxy_read_timeout 10s;
+        proxy_connect_timeout 10s;
+        
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+    }
+
+    # 重定向HTTP到HTTPS（除了健康检查端点外的所有请求）
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name lovehome.xin;
+
+    # 增加Nginx保持连接的设置
+    keepalive_timeout 65;
+    keepalive_requests 100;
+    
+    # 禁用TCP连接的突然关闭，防止Connection:close头
+    tcp_nodelay on;
+    tcp_nopush on;
+    
+    # SSL配置 - 使用自签名证书，后续可以替换为正式证书
+    ssl_certificate /var/www/love-home/18979882_lovehome.xin_nginx/lovehome.xin.pem;
+    ssl_certificate_key /var/www/love-home/18979882_lovehome.xin_nginx/lovehome.xin.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 1d;
+    
+    # 增加SSL握手超时，防止连接中断
+    ssl_handshake_timeout 10s;
+    
+    # 设置SSL缓冲区大小
+    ssl_buffer_size 4k;
+    
+    # 专门针对微信小程序的优化
+    ssl_session_tickets on;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
+
+    # 专门的健康检查端点配置 - 特别允许微信小程序
+    location = /health {
+        proxy_pass http://localhost:8080/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_next_upstream off;
+        proxy_read_timeout 30s; # 增加超时时间
+        proxy_connect_timeout 10s;
+        proxy_cache off;
+        proxy_buffering off;
+        
+        # 确保保持连接
+        proxy_set_header Connection "";
+        
+        # 微信小程序关键头信息
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+        add_header 'Access-Control-Max-Age' '86400' always;
+        add_header 'Connection' 'keep-alive' always;
+        add_header 'Keep-Alive' 'timeout=65' always;
+        
+        # 专门为微信小程序添加缓存控制头
+        add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate' always;
+        add_header 'Pragma' 'no-cache' always;
+        add_header 'Expires' '0' always;
+        
+        # 处理OPTIONS请求
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+    }
+    
+    # API健康检查端点配置
+    location = /api/health {
+        proxy_pass http://localhost:8080/api/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_next_upstream off;
+        proxy_read_timeout 30s; # 增加超时时间
+        proxy_connect_timeout 10s;
+        proxy_cache off;
+        proxy_buffering off;
+        
+        # 确保保持连接
+        proxy_set_header Connection "";
+        
+        # 允许跨域请求（对于健康检查很重要）
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+        
+        # 处理OPTIONS请求
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
             add_header 'Access-Control-Max-Age' 1728000;
             add_header 'Content-Type' 'text/plain; charset=utf-8';
             add_header 'Content-Length' 0;
@@ -71,6 +175,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # 增加超时和请求大小设置
+        proxy_read_timeout 60s;
+        proxy_connect_timeout 10s;
+        client_max_body_size 10m;
     }
 
     # 静态文件和前端SPA
