修复微信小程序ERR_CONNECTION_CLOSED错误，优化SSL配置与连接处理

--- a/nginx-config.conf
+++ b/nginx-config.conf
@@ -55,12 +55,12 @@ server {
 }
 
 server {
-    listen 443 ssl;
+    listen 443 ssl http2; # 启用HTTP/2
     server_name lovehome.xin;
 
     # 增加Nginx保持连接的设置
-    keepalive_timeout 65;
-    keepalive_requests 100;
+    keepalive_timeout 300; # 增加到300秒
+    keepalive_requests 1000; # 增加单连接请求数
     
     # 禁用TCP连接的突然关闭，防止Connection:close头
     tcp_nodelay on;
@@ -70,23 +70,23 @@ server {
     ssl_certificate /var/www/love-home/18979882_lovehome.xin_nginx/lovehome.xin.pem;
     ssl_certificate_key /var/www/love-home/18979882_lovehome.xin_nginx/lovehome.xin.key;
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256';
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 1d;
+    ssl_prefer_server_ciphers off; # 关闭服务器密码套件偏好
+    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305'; # 更现代的密码套件
+    ssl_session_cache shared:SSL:20m; # 增加缓存大小
+    ssl_session_timeout 4h; # 增加会话超时
     
     # 增加SSL握手超时，防止连接中断
-    ssl_handshake_timeout 10s;
+    ssl_handshake_timeout 20s; # 增加握手超时
     
     # 设置SSL缓冲区大小
-    ssl_buffer_size 4k;
+    ssl_buffer_size 8k; # 增加缓冲区大小
     
     # 专门针对微信小程序的优化
     ssl_session_tickets on;
     ssl_stapling on;
     ssl_stapling_verify on;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
-    resolver_timeout 5s;
+    resolver 8.8.8.8 8.8.4.4 114.114.114.114 valid=300s; # 增加国内DNS
+    resolver_timeout 10s; # 增加解析超时
 
     # 专门的健康检查端点配置 - 特别允许微信小程序
     location = /health {
@@ -97,13 +97,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_next_upstream off;
-        proxy_read_timeout 30s; # 增加超时时间
+        proxy_read_timeout 60s; # 增加超时时间
         proxy_connect_timeout 10s;
         proxy_cache off;
         proxy_buffering off;
         
-        # 确保保持连接
-        proxy_set_header Connection "";
+        # 确保保持连接 - 不设置Connection: close
+        proxy_set_header Connection ""; # 移除Connection头
         
         # 微信小程序关键头信息
         add_header 'Access-Control-Allow-Origin' '*' always;
@@ -111,7 +111,7 @@ server {
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         add_header 'Access-Control-Max-Age' '86400' always;
         add_header 'Connection' 'keep-alive' always;
-        add_header 'Keep-Alive' 'timeout=65' always;
+        add_header 'Keep-Alive' 'timeout=300' always; # 增加Keep-Alive超时
         
         # 专门为微信小程序添加缓存控制头
         add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate' always;
@@ -139,7 +139,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_next_upstream off;
-        proxy_read_timeout 30s; # 增加超时时间
+        proxy_read_timeout 60s; # 增加超时时间
         proxy_connect_timeout 10s;
         proxy_cache off;
         proxy_buffering off;
